Updated jetson setup -- pyenv python2.7 and python3; install opencv under ~/.local
Jetson setup now properly creates virtual python environments for 2.7 and 3 and pip
installs everything into the virtual environments.

The custom build of opencv is now installed into ~/.local. Thios prevents it from colliding
with apt-get installed opencv. It is earlier in the path so it takes priority.

import cv2 works in both python2.7 and python3.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "jetson/opencv/experiments/python-opencv-gstreamer-examples"]
 	path = jetson/opencv/experiments/python-opencv-gstreamer-examples
 	url = git@github.com:madams1337/python-opencv-gstreamer-examples.git
+[submodule "jetson/external/buildOpenCVTX2"]
+	path = jetson/external/buildOpenCVTX2
+	url = git@github.com:frcmi/buildOpenCVTX2.git
+[submodule "jetson/opencv/experiments/external/python-opencv-gstreamer-examples"]
+	path = jetson/opencv/experiments/external/python-opencv-gstreamer-examples
+	url = git@github.com:madams1337/python-opencv-gstreamer-examples.git
