--- a/.gitignore
+++ b/.gitignore
@@ -27,24 +27,12 @@ __pycache__/
 *.dll
 *.bin
 *.lock
-*.dll
 
 # Gradle files #
-.gradle/5.0/fileHashes/fileHashes.bin
-.gradle/5.0/fileHashes/fileHashes.lock
-.gradle/5.0/javaCompile/javaCompile.lock
-.gradle/5.0/javaCompile/taskHistory.bin
-.gradle/5.0/taskHistory/taskHistory.bin
-.gradle/5.0/taskHistory/taskHistory.lock
-.gradle/buildOutputCleanup/buildOutputCleanup.lock
-.gradle/buildOutputCleanup/outputFiles.bin
-.gradle/5.0/javaCompile/classAnalysis.bin
+/.gradle/
 
 # Build files #
-build/
-
-# Mac stuff #
-*/.DS_Store
+/build/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
