--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,12 @@ repositories {
 dependencies {
     compile wpi.deps.wpilib()
     compile wpi.deps.vendor.java()
+    compile 'javax.json:javax.json-api:1.0'
+    compile 'javax.json.bind:javax.json.bind-api:1.0'
+    compile 'javax.ws.rs:javax.ws.rs-api:2.0'
+    compile 'org.glassfish.jersey.core:jersey-client:2.0-m04'
+    compile 'org.jboss.resteasy:resteasy-client:3.0.14.Final'
+    compile 'org.jboss.resteasy:resteasy-jackson-provider:2.3.4.Final'
     nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
     testCompile 'junit:junit:4.12'
