--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,8 @@ __pycache__/
 # Build files #
 /build/
 
+# VSCode files #
+/.vscode/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
