--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2019.2.1"  
+    id "com.dorongold.task-tree" version "1.3.1"
 }
 
 def ROBOT_MAIN_CLASS = "frc.robot.Main"
@@ -66,7 +67,8 @@ jar {
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
 }
 
-task execute(type:JavaExec) {
-   main = mainClass
-   classpath = sourceSets.main.runtimeClasspath
+task query_jetson(type:JavaExec) {
+    dependsOn ':build'
+    main="org.mercerislandschools.mihs.frc.vision.client.App"
+    classpath = sourceSets.main.runtimeClasspath
 }
